_Practica_2_Python_JSBach/gen/jsbachParser.py
# Generated from /Users/ignasi/Documents/_Q6_/_LP_/_Practica_2_Python_JSBach/jsbach.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class jsbachParser ( Parser ):

    grammarFileName = "jsbach.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|:'", "':|'", "'<-'", "'if'", "'else |:'", 
                     "'<?>'", "'<!>'", "'<:>'", "'<<'", "'8<'", "'while'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'*'", 
                     "'/'", "'+'", "'-'", "'%'", "'('", "')'", "'{'", "'}'", 
                     "'#'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "MUSICALNOTE", "FUNCTIONNAME", 
                      "VARIABLENAME", "INTEGER", "NORMALSTRING", "COMMENTS", 
                      "WS" ]

    RULE_root = 0
    RULE_functiondefinition = 1
    RULE_instructions = 2
    RULE_expressions = 3

    ruleNames =  [ "root", "functiondefinition", "instructions", "expressions" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    MUSICALNOTE=30
    FUNCTIONNAME=31
    VARIABLENAME=32
    INTEGER=33
    NORMALSTRING=34
    COMMENTS=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(jsbachParser.EOF, 0)

        def functiondefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.FunctiondefinitionContext)
            else:
                return self.getTypedRuleContext(jsbachParser.FunctiondefinitionContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = jsbachParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsbachParser.FUNCTIONNAME:
                self.state = 8
                self.functiondefinition()
                self.state = 13
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 14
            self.match(jsbachParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctiondefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTIONNAME(self):
            return self.getToken(jsbachParser.FUNCTIONNAME, 0)

        def instructions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.InstructionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.InstructionsContext,i)


        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressionsContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_functiondefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctiondefinition" ):
                listener.enterFunctiondefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctiondefinition" ):
                listener.exitFunctiondefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctiondefinition" ):
                return visitor.visitFunctiondefinition(self)
            else:
                return visitor.visitChildren(self)




    def functiondefinition(self):

        localctx = jsbachParser.FunctiondefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functiondefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(jsbachParser.FUNCTIONNAME)

            self.state = 20
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.T__22) | (1 << jsbachParser.T__24) | (1 << jsbachParser.T__26) | (1 << jsbachParser.MUSICALNOTE) | (1 << jsbachParser.VARIABLENAME) | (1 << jsbachParser.INTEGER) | (1 << jsbachParser.NORMALSTRING))) != 0):
                self.state = 17
                self.expressions(0)
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 23
            self.match(jsbachParser.T__0)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.T__3) | (1 << jsbachParser.T__5) | (1 << jsbachParser.T__6) | (1 << jsbachParser.T__7) | (1 << jsbachParser.T__9) | (1 << jsbachParser.T__10) | (1 << jsbachParser.FUNCTIONNAME) | (1 << jsbachParser.VARIABLENAME))) != 0):
                self.state = 24
                self.instructions()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self.match(jsbachParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return jsbachParser.RULE_instructions

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReadContext(InstructionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.InstructionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self):
            return self.getTypedRuleContext(jsbachParser.ExpressionsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)


    class WriteContext(InstructionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.InstructionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressionsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite" ):
                listener.enterWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite" ):
                listener.exitWrite(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)


    class PlayContext(InstructionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.InstructionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLENAME(self):
            return self.getToken(jsbachParser.VARIABLENAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlay" ):
                listener.enterPlay(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlay" ):
                listener.exitPlay(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlay" ):
                return visitor.visitPlay(self)
            else:
                return visitor.visitChildren(self)


    class ListcutContext(InstructionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.InstructionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self):
            return self.getTypedRuleContext(jsbachParser.ExpressionsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListcut" ):
                listener.enterListcut(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListcut" ):
                listener.exitListcut(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListcut" ):
                return visitor.visitListcut(self)
            else:
                return visitor.visitChildren(self)


    class IfelseContext(InstructionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.InstructionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self):
            return self.getTypedRuleContext(jsbachParser.ExpressionsContext,0)

        def instructions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.InstructionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.InstructionsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfelse" ):
                listener.enterIfelse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfelse" ):
                listener.exitIfelse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfelse" ):
                return visitor.visitIfelse(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(InstructionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.InstructionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLENAME(self):
            return self.getToken(jsbachParser.VARIABLENAME, 0)
        def expressions(self):
            return self.getTypedRuleContext(jsbachParser.ExpressionsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(InstructionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.InstructionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressionsContext,i)

        def instructions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.InstructionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.InstructionsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class FunctioncallContext(InstructionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.InstructionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNCTIONNAME(self):
            return self.getToken(jsbachParser.FUNCTIONNAME, 0)
        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressionsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctioncall" ):
                listener.enterFunctioncall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctioncall" ):
                listener.exitFunctioncall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctioncall" ):
                return visitor.visitFunctioncall(self)
            else:
                return visitor.visitChildren(self)


    class ListinsertContext(InstructionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.InstructionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLENAME(self):
            return self.getToken(jsbachParser.VARIABLENAME, 0)
        def expressions(self):
            return self.getTypedRuleContext(jsbachParser.ExpressionsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListinsert" ):
                listener.enterListinsert(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListinsert" ):
                listener.exitListinsert(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListinsert" ):
                return visitor.visitListinsert(self)
            else:
                return visitor.visitChildren(self)



    def instructions(self):

        localctx = jsbachParser.InstructionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instructions)
        self._la = 0 # Token type
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = jsbachParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.match(jsbachParser.VARIABLENAME)
                self.state = 33
                self.match(jsbachParser.T__2)
                self.state = 34
                self.expressions(0)
                pass

            elif la_ == 2:
                localctx = jsbachParser.IfelseContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.match(jsbachParser.T__3)
                self.state = 36
                self.expressions(0)
                self.state = 37
                self.match(jsbachParser.T__0)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.T__3) | (1 << jsbachParser.T__5) | (1 << jsbachParser.T__6) | (1 << jsbachParser.T__7) | (1 << jsbachParser.T__9) | (1 << jsbachParser.T__10) | (1 << jsbachParser.FUNCTIONNAME) | (1 << jsbachParser.VARIABLENAME))) != 0):
                    self.state = 38
                    self.instructions()
                    self.state = 43
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 44
                self.match(jsbachParser.T__1)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==jsbachParser.T__4:
                    self.state = 45
                    self.match(jsbachParser.T__4)
                    self.state = 49
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.T__3) | (1 << jsbachParser.T__5) | (1 << jsbachParser.T__6) | (1 << jsbachParser.T__7) | (1 << jsbachParser.T__9) | (1 << jsbachParser.T__10) | (1 << jsbachParser.FUNCTIONNAME) | (1 << jsbachParser.VARIABLENAME))) != 0):
                        self.state = 46
                        self.instructions()
                        self.state = 51
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 52
                    self.match(jsbachParser.T__1)


                pass

            elif la_ == 3:
                localctx = jsbachParser.ReadContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.match(jsbachParser.T__5)
                self.state = 56
                self.expressions(0)
                pass

            elif la_ == 4:
                localctx = jsbachParser.WriteContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.match(jsbachParser.T__6)
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 58
                        self.expressions(0) 
                    self.state = 63
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass

            elif la_ == 5:
                localctx = jsbachParser.PlayContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 64
                self.match(jsbachParser.T__7)
                self.state = 65
                self.match(jsbachParser.VARIABLENAME)
                pass

            elif la_ == 6:
                localctx = jsbachParser.ListinsertContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 66
                self.match(jsbachParser.VARIABLENAME)
                self.state = 67
                self.match(jsbachParser.T__8)
                self.state = 68
                self.expressions(0)
                pass

            elif la_ == 7:
                localctx = jsbachParser.ListcutContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 69
                self.match(jsbachParser.T__9)
                self.state = 70
                self.expressions(0)
                pass

            elif la_ == 8:
                localctx = jsbachParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 71
                self.match(jsbachParser.T__10)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.T__22) | (1 << jsbachParser.T__24) | (1 << jsbachParser.T__26) | (1 << jsbachParser.MUSICALNOTE) | (1 << jsbachParser.VARIABLENAME) | (1 << jsbachParser.INTEGER) | (1 << jsbachParser.NORMALSTRING))) != 0):
                    self.state = 72
                    self.expressions(0)
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 78
                self.match(jsbachParser.T__0)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.T__3) | (1 << jsbachParser.T__5) | (1 << jsbachParser.T__6) | (1 << jsbachParser.T__7) | (1 << jsbachParser.T__9) | (1 << jsbachParser.T__10) | (1 << jsbachParser.FUNCTIONNAME) | (1 << jsbachParser.VARIABLENAME))) != 0):
                    self.state = 79
                    self.instructions()
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 85
                self.match(jsbachParser.T__1)
                pass

            elif la_ == 9:
                localctx = jsbachParser.FunctioncallContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 86
                self.match(jsbachParser.FUNCTIONNAME)
                self.state = 93
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 90
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 87
                            self.expressions(0) 
                        self.state = 92
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,9,self._ctx)



                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return jsbachParser.RULE_expressions

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressionsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd" ):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)


    class ListsizeContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLENAME(self):
            return self.getToken(jsbachParser.VARIABLENAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListsize" ):
                listener.enterListsize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListsize" ):
                listener.exitListsize(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListsize" ):
                return visitor.visitListsize(self)
            else:
                return visitor.visitChildren(self)


    class LowerContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressionsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLower" ):
                listener.enterLower(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLower" ):
                listener.exitLower(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLower" ):
                return visitor.visitLower(self)
            else:
                return visitor.visitChildren(self)


    class VariableNameContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLENAME(self):
            return self.getToken(jsbachParser.VARIABLENAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableName" ):
                listener.enterVariableName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableName" ):
                listener.exitVariableName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableName" ):
                return visitor.visitVariableName(self)
            else:
                return visitor.visitChildren(self)


    class GreaterOrEqualContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressionsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGreaterOrEqual" ):
                listener.enterGreaterOrEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGreaterOrEqual" ):
                listener.exitGreaterOrEqual(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGreaterOrEqual" ):
                return visitor.visitGreaterOrEqual(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NORMALSTRING(self):
            return self.getToken(jsbachParser.NORMALSTRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class OperationPriorityContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self):
            return self.getTypedRuleContext(jsbachParser.ExpressionsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperationPriority" ):
                listener.enterOperationPriority(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperationPriority" ):
                listener.exitOperationPriority(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperationPriority" ):
                return visitor.visitOperationPriority(self)
            else:
                return visitor.visitChildren(self)


    class NotEqualsContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressionsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotEquals" ):
                listener.enterNotEquals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotEquals" ):
                listener.exitNotEquals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotEquals" ):
                return visitor.visitNotEquals(self)
            else:
                return visitor.visitChildren(self)


    class RemainderContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressionsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRemainder" ):
                listener.enterRemainder(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRemainder" ):
                listener.exitRemainder(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRemainder" ):
                return visitor.visitRemainder(self)
            else:
                return visitor.visitChildren(self)


    class IntegerContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(jsbachParser.INTEGER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)


    class DivideContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressionsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivide" ):
                listener.enterDivide(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivide" ):
                listener.exitDivide(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivide" ):
                return visitor.visitDivide(self)
            else:
                return visitor.visitChildren(self)


    class EqualsContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)
